[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Code/item.gd" type="Script" id=2]
[ext_resource path="res://Images/UI/buttonSquare_blue_pressed.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 33.7621, 32.7478 )

[sub_resource type="Animation" id=2]
resource_name = "flicker"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("../AlphusWizard/Light2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 3.0, 0.0 ]
}

[node name="item" type="Node2D"]
script = ExtResource( 2 )
image = ExtResource( 1 )
viewText = [ "Zam you really don't want this toast" ]

[node name="isInventory" type="Sprite" parent="."]
visible = false
position = Vector2( 0.115211, -1.18249 )
scale = Vector2( 1.90731, 1.90731 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="walkPos" type="Node2D" parent="."]
position = Vector2( 1.41383, 66.6046 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 1 )
energy = 0.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/flicker = SubResource( 2 )

[node name="lightTimer" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="timeout" from="lightTimer" to="." method="_on_lightTimer_timeout"]
